# prpc

./: LICENSE  README.md
fe/: .eslintrc.js  README.md  package.json
fe/src/: index.ts
fe/src/api/: index.ts  pyodide.ts  static.ts  web.ts
fe/src/enums/: APIMethods.ts  LoadStatus.ts  WorkerActions.ts
fe/src/sample/: echoService.ts
fe/src/types/: index.d.ts
fe/src/workers/: pyodide.worker.ts
fe/tools/: paths.js
harness/: package-lock.json
harness/src/: App.tsx  RpcContainer.tsx  index.tsx  setupProxy.js
harness/src/components/: RpcContainer.tsx
harness/src/components/transports/: PyodideTransportConfig.tsx  StaticTransportConfig.tsx  WebTransportConfig.tsx
harness/src/sample/: sumService.ts
javascript/: README.md  package.json  tsconfig.json
javascript/src/: index.ts
javascript/src/api/: index.ts  pyodide.ts  static.ts  web.ts
javascript/src/sample/: echoService.ts  index.ts
javascript/src/types/: index.ts
javascript/src/util/: dataTransfer.ts
javascript/src/workers/: pyodide.types.ts  pyodide.worker.ts
python/: README.md  pyproject.toml
python/prpc_python/: __api.py  __init__.py  cli.py  flask.py  pyodide.py  sample.py
python/prpc_python/flask/: __api.py  __app.py  __init__.py
python/prpc_python/flask/__templates/: index.html
python/rpc_wrap/: __api.py  __init__.py  cli.py  flask.py  pyodide.py  sample.py
sample-client/: package-lock.json  package.json
sample-client/public/: prpc_python-0.9.2-py3-none-any.whl
sample-client/src/components/: RpcContainer.tsx
sample-client/src/components/transports/: PyodideTransportConfig.tsx
sample-client/src/sample/: sumService.ts
