[tool.poetry]
name = "rpc-wrap"
version = "0.1.0"
description = ""
authors = ["Kaj Siebert <kaj@k-si.com>"]
readme = "README.md"
packages = [
    { include = "rpc_wrap" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
click = {version = "^8.1.3", optional = true}
click-log = {version = "^0.4.0", optional = true}
rich = {version = "^12.6.0", optional = true}
flask = {version = "^2.2.2", optional = true}
flask-cors = {version = "^3.0.10", optional = true}
setuptools = "^65.6.0"

[tool.poetry.extras]
cli = ["click", "click-log", "rich"]
flask = ["flask", "flask-cors"]

[tool.poetry.scripts]
rpc-wrap = "rpc_wrap.cli:main"

[tool.poetry.plugins."rpc_wrap"]
sample = "rpc_wrap.sample:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
