[tool.poetry]
name = "prpc_python"
version = "0.9.2"
description = "A very simple RPC-like library to make writing Pyodide applications easier. At the core of the library is a simple App + Decorator based approach inspired by Flask."
license = "MIT"
authors = ["Kaj Siebert <kaj@k-si.com>", "Dave Tickle <dave@dotloadmovie.com>", ]
readme = "README.md"
packages = [
    { include = "prpc_python" },
]
repository = "https://github.com/SocialFinanceDigitalLabs/prpc"
keywords = ["rpc", "pyodide"]


[tool.poetry.dependencies]
python = ">=3.7,<4.0"
click = {version = "^8.1.3", optional = true}
click-log = {version = "^0.4.0", optional = true}
rich = {version = "^12.6.0", optional = true}
flask = {version = "^2.2.2", optional = true}
flask-cors = {version = "^3.0.10", optional = true}
setuptools = "^62.0.0"
Pillow = "9.1.1"

[tool.poetry.extras]
cli = ["click", "click-log", "rich"]
flask = ["flask", "flask-cors"]
simple = ["flask", "flask-cors", "click", "click-log", "rich"]

[tool.poetry.scripts]
prpc = { callable = "prpc_python.cli:prpc", extras=["cli"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
